--- a/prepros-6.config
+++ b/prepros-6.config
@@ -4,9 +4,7 @@
   "exportConfig": true,
   "fileConfigs": [],
   "fileTree": {
-    "expandedDirs": [
-      "image"
-    ],
+    "expandedDirs": [],
     "hideSystemFiles": true,
     "systemFiles": [
       ".*",
