--- a/prepros-6.config
+++ b/prepros-6.config
@@ -21,7 +21,9 @@
     {
       "path": "css/style.scss",
       "imports": [
-        "css/_normalize.scss"
+        "css/_normalize.scss",
+        "css/_slick.scss",
+        "css/_slick-theme.scss"
       ]
     }
   ],
